# openf1_data_analytics

./: .env.example  .gitignore  CI_CD_WORKFLOW_DIAGRAM.md  DAGSTER_PIPELINE_DIAGRAM.md  QUICK_START.md  README.md  dagster_pipeline.py  databricks.yml  load_2024_session.sh  pyproject.toml  requirements.txt
.github/workflows/: data_ingestion.yml  dbt-ci.yml  dbt_ci_cd.yml  profiles.yml
dbt_f1_data_analytics/: .env.example  .gitignore  COMPLETE_VALIDATION.sql  QUICK_VALIDATION.sql  README.md  SCHEMA_STRUCTURE.md  VALIDATION_QUERIES.sql  dbt_project.yml  example_run_dbt.sh  profiles.yml
dbt_f1_data_analytics/macros/: test_no_future_dates.sql  test_positive_values.sql  test_reasonable_lap_time.sql  test_valid_percentage.sql
dbt_f1_data_analytics/snapshots/: driver_snapshot.sql  session_snapshot.sql
dbt_f1_data_analytics/tests/: assert_dim_drivers_scd2_validity.sql  assert_driver_session_summary_accuracy.sql  assert_fastest_lap_consistency.sql  assert_leaderboard_position_gaps.sql  assert_no_orphaned_laps.sql  assert_team_performance_driver_counts.sql  one_current_record_per_driver.sql
docs/: DEMO_SCRIPT.md  GETTING_STARTED.md  INGESTION_WORKFLOW.md  QUICK_REFERENCE.md  README.md  architecture.md  best_practices.md  logical_data_model.md
openf1_api_data_extractor/: README.md
openf1_api_data_extractor/config/: __init__.py  settings.py
openf1_api_data_extractor/dlt_bronze_load/: BRONZE_VERIFICATION_QUERIES.sql  README.md  config.py  (+8 more)
scripts/: test_pipeline_local.py
test_data/: README.md  drivers_9158.json  laps_9158.json  locations_9158.json  sessions_9158.json
(+23 files in other folders)
