[project]
name = "openf1-data-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-connect>=17.3.0",
    "databricks-sdk>=0.63.0",
    "dbt-core>=1.10.13",
    "dbt-databricks>=1.10.14",
    "pandas>=2.2.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "tree>=0.2.4",
]
